# inheritance_polymorphism

01/: Makefile  figure.cpp  figure.hpp  main.cpp  quadrilateral.cpp  quadrilateral.hpp  triangle.hpp  unknown_figure.hpp  unkown_figure.cpp
02/: CMakeLists.txt  Makefile  eq_triangle.cpp  eq_triangle.h  figure02.cpp  figure02.h  figure02.hpp  isos_triangle.cpp  isos_triangle.h  main.cpp  parallelogram.cpp  parallelogram.h  parallelogramm.cpp  parallelogramm.h  rectan_triangle.cpp  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  right_triangle.cpp  right_triangle.h  square.cpp  square.h  triangle.cpp  triangle.h
03/: Makefile  eq_triangle.cpp  eq_triangle.h  figure03.cpp  figure03.h  isos_triangle.cpp  isos_triangle.h  main.cpp  parallelogram.h  parallelogramm.cpp  parallelogramm.h  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  right_triangle.cpp  right_triangle.h  square.cpp  square.h  triangle.cpp  triangle.h
